feat: add rupture-no-conflict

--- a/rupture/index.styl
+++ b/rupture/index.styl
@@ -1,5 +1,6 @@
 base-font-size ?= 16px
 rasterise-media-queries ?= false
+rupture-no-conflict ?= false
 
 rupture = {
   rasterise-media-queries: rasterise-media-queries
@@ -103,7 +104,7 @@ create-fallback-class(selected, class)
 //   - +between(1, 300px) scale:custom
 //   - +between(200px, 4) custom:scale
 
-between(min, max, anti-overlap = rupture.anti-overlap, density = null, orientation = null, use-device-width = rupture.use-device-width, fallback-class = null)
+rupture-between(min, max, anti-overlap = rupture.anti-overlap, density = null, orientation = null, use-device-width = rupture.use-device-width, fallback-class = null)
   selected = selector()
 
   if -is-string(orientation)
@@ -141,120 +142,149 @@ between(min, max, anti-overlap = rupture.anti-overlap, density = null, orientati
       for query in -density-queries(density)
         push(conditions, condition + ' and %s' % (query))
       condition = join(', ', conditions)
-    @media condition
+    @media ({condition})
       {block}
   if fallback-class
     +create-fallback-class(selected, fallback-class)
       {block}
 
-at(scale-point, anti-overlap = rupture.anti-overlap, density = null, orientation = null, use-device-width = rupture.use-device-width, fallback-class = null)
+between = rupture-between unless rupture-no-conflict
+
+rupture-at(scale-point, anti-overlap = rupture.anti-overlap, density = null, orientation = null, use-device-width = rupture.use-device-width, fallback-class = null)
   if -is-string(orientation)
     orientation = convert(orientation)
   if -is-string(density)
     density = convert(density)
-  +between(scale-point, scale-point, anti-overlap, density, orientation, use-device-width, fallback-class)
+  +rupture-between(scale-point, scale-point, anti-overlap, density, orientation, use-device-width, fallback-class)
     {block}
 
-from-width(scale-point, anti-overlap = rupture.anti-overlap, density = null, orientation = null, use-device-width = rupture.use-device-width, fallback-class = null)
+at = rupture-at unless rupture-no-conflict
+
+rupture-from-width(scale-point, anti-overlap = rupture.anti-overlap, density = null, orientation = null, use-device-width = rupture.use-device-width, fallback-class = null)
   if -is-string(orientation)
     orientation = convert(orientation)
   if -is-string(density)
     density = convert(density)
-  +between(scale-point, length(rupture.scale), anti-overlap, density, orientation, use-device-width, fallback-class)
+  +rupture-between(scale-point, length(rupture.scale), anti-overlap, density, orientation, use-device-width, fallback-class)
     {block}
 
-above = from-width
+from-width = rupture-from-width unless rupture-no-conflict
 
-to-width(scale-point, anti-overlap = rupture.anti-overlap, density = null, orientation = null, use-device-width = rupture.use-device-width, fallback-class = null)
+rupture-above = rupture-from-width
+above = rupture-from-width unless rupture-no-conflict
+
+rupture-to-width(scale-point, anti-overlap = rupture.anti-overlap, density = null, orientation = null, use-device-width = rupture.use-device-width, fallback-class = null)
   if -is-string(orientation)
     orientation = convert(orientation)
   if -is-string(density)
     density = convert(density)
-  +between(1, scale-point, anti-overlap, density, orientation, use-device-width, fallback-class)
+  +rupture-between(1, scale-point, anti-overlap, density, orientation, use-device-width, fallback-class)
     {block}
 
-below = to-width
+to-width = rupture-to-width unless rupture-no-conflict
 
-mobile(anti-overlap = rupture.anti-overlap, density = null, orientation = null, use-device-width = rupture.use-device-width, fallback-class = null)
+rupture-below = rupture-to-width
+below = rupture-to-width unless rupture-no-conflict
+
+rupture-mobile(anti-overlap = rupture.anti-overlap, density = null, orientation = null, use-device-width = rupture.use-device-width, fallback-class = null)
   if -is-string(orientation)
     orientation = convert(orientation)
   if -is-string(density)
     density = convert(density)
-  +below(rupture.mobile-cutoff, anti-overlap, density, orientation, use-device-width, fallback-class)
+  +rupture-below(rupture.mobile-cutoff, anti-overlap, density, orientation, use-device-width, fallback-class)
     {block}
 
-tablet(anti-overlap = rupture.anti-overlap, density = null, orientation = null, use-device-width = rupture.use-device-width, fallback-class = null)
+mobile = rupture-mobile unless rupture-no-conflict
+
+rupture-tablet(anti-overlap = rupture.anti-overlap, density = null, orientation = null, use-device-width = rupture.use-device-width, fallback-class = null)
   if -is-string(orientation)
     orientation = convert(orientation)
   if -is-string(density)
     density = convert(density)
-  +between(rupture.mobile-cutoff, rupture.desktop-cutoff, anti-overlap, density, orientation, use-device-width, fallback-class)
+  +rupture-between(rupture.mobile-cutoff, rupture.desktop-cutoff, anti-overlap, density, orientation, use-device-width, fallback-class)
     {block}
 
-desktop(anti-overlap = rupture.anti-overlap, density = null, orientation = null, use-device-width = rupture.use-device-width, fallback-class = null)
+tablet = rupture-tablet unless rupture-no-conflict
+
+rupture-desktop(anti-overlap = rupture.anti-overlap, density = null, orientation = null, use-device-width = rupture.use-device-width, fallback-class = null)
   if -is-string(orientation)
     orientation = convert(orientation)
   if -is-string(density)
     density = convert(density)
-  +above(rupture.desktop-cutoff, anti-overlap, density, orientation, use-device-width, fallback-class)
+  +rupture-above(rupture.desktop-cutoff, anti-overlap, density, orientation, use-device-width, fallback-class)
     {block}
 
-hd(anti-overlap = rupture.anti-overlap, density = null, orientation = null, use-device-width = rupture.use-device-width, fallback-class = null)
+desktop = rupture-desktop unless rupture-no-conflict
+
+rupture-hd(anti-overlap = rupture.anti-overlap, density = null, orientation = null, use-device-width = rupture.use-device-width, fallback-class = null)
   if -is-string(orientation)
     orientation = convert(orientation)
   if -is-string(density)
     density = convert(density)
-  +above(rupture.hd-cutoff, anti-overlap, density, orientation, use-device-width, fallback-class)
+  +rupture-above(rupture.hd-cutoff, anti-overlap, density, orientation, use-device-width, fallback-class)
     {block}
 
-density(density, orientation = null, fallback-class = null)
+hd = rupture-hd unless rupture-no-conflict
+
+rupture-density(density, orientation = null, fallback-class = null)
   selected = selector()
   if not (rupture.rasterise-media-queries)
     conditions = ()
     for query in -density-queries(density)
       condition = 'only screen and %s' % (query)
       if orientation
-        condition = condition + ' and (orientation: %s)' % (orientation)
+        condition = condition + ' and (orientation: %s)' % (unquote(orientation))
       push(conditions, condition)
     condition = join(', ', conditions)
-    @media condition
+    @media ({condition})
       {block}
     if fallback-class
       +create-fallback-class(selected, fallback-class)
         {block}
 
-pixel-ratio = density
+density = rupture-density unless rupture-no-conflict
 
-retina(orientation = null, fallback-class = null)
-  +density('retina', orientation, fallback-class)
+rupture-pixel-ratio = rupture-density
+pixel-ratio = rupture-density unless rupture-no-conflict
+
+rupture-retina(orientation = null, fallback-class = null)
+  +rupture-density('retina', orientation, fallback-class)
     {block}
 
-landscape(density = null, fallback-class = null)
+retina = rupture-retina unless rupture-no-conflict
+
+rupture-landscape(density = null, fallback-class = null)
   selected = selector()
   if not (rupture.rasterise-media-queries)
     if -is-string(density)
       density = convert(density)
     if density
-      +pixel-ratio(density, orientation: landscape, fallback-class)
+      +rupture-pixel-ratio(density, orientation: s('landscape'), fallback-class)
         {block}
     else
-      @media only screen and (orientation: landscape)
+      condition = "only screen and (orientation: landscape)";
+      @media ({condition})
         {block}
       if fallback-class
         +create-fallback-class(selected, fallback-class)
           {block}
 
-portrait(density = null, fallback-class = null)
+landscape = rupture-landscape unless rupture-no-conflict
+
+rupture-portrait(density = null, fallback-class = null)
   selected = selector()
   if not (rupture.rasterise-media-queries)
     if -is-string(density)
       density = convert(density)
     if density
-      +pixel-ratio(density, orientation: portrait, fallback-class)
+      +rupture-pixel-ratio(density, orientation: s('portrait'), fallback-class)
         {block}
     else
-      @media only screen and (orientation: portrait)
+      condition = "only screen and (orientation: portrait)";
+      @media ({condition})
         {block}
       if fallback-class
         +create-fallback-class(selected, fallback-class)
           {block}
+
+portrait = rupture-portrait unless rupture-no-conflict
