--- a/test/fixtures/expected/below.css
+++ b/test/fixtures/expected/below.css
@@ -1,7 +1,7 @@
 .hello {
   color: #f00;
 }
-@media only screen and (max-width: 500px) {
+@media (only screen and (max-width: 500px)) {
   .hello {
     color: #00f;
   }
