--- a/test/fixtures/expected/hd.css
+++ b/test/fixtures/expected/hd.css
@@ -1,7 +1,7 @@
 .hello {
   color: #f00;
 }
-@media only screen and (min-width: 1800px) {
+@media (only screen and (min-width: 1800px)) {
   .hello {
     color: #00f;
   }
