--- a/test/fixtures/expected/overlap.css
+++ b/test/fixtures/expected/overlap.css
@@ -1,12 +1,12 @@
 .overlap-plus-em {
   text-align: center;
 }
-@media only screen and (min-width: 10.001em) and (max-width: 20em) {
+@media (only screen and (min-width: 10.001em) and (max-width: 20em)) {
   .overlap-plus-em {
     text-align: right;
   }
 }
-@media only screen and (min-width: 20.001em) and (max-width: 50em) {
+@media (only screen and (min-width: 20.001em) and (max-width: 50em)) {
   .overlap-plus-em {
     text-align: left;
   }
@@ -14,12 +14,12 @@
 .overlap-minus-em {
   text-align: center;
 }
-@media only screen and (min-width: 10em) and (max-width: 19.999em) {
+@media (only screen and (min-width: 10em) and (max-width: 19.999em)) {
   .overlap-minus-em {
     text-align: right;
   }
 }
-@media only screen and (min-width: 20em) and (max-width: 49.999em) {
+@media (only screen and (min-width: 20em) and (max-width: 49.999em)) {
   .overlap-minus-em {
     text-align: left;
   }
@@ -27,12 +27,12 @@
 .overlap-plus-rem {
   text-align: center;
 }
-@media only screen and (min-width: 10.001rem) and (max-width: 20rem) {
+@media (only screen and (min-width: 10.001rem) and (max-width: 20rem)) {
   .overlap-plus-rem {
     text-align: right;
   }
 }
-@media only screen and (min-width: 20.001rem) and (max-width: 50em) {
+@media (only screen and (min-width: 20.001rem) and (max-width: 50em)) {
   .overlap-plus-rem {
     text-align: left;
   }
@@ -40,12 +40,12 @@
 .overlap-minus-rem {
   text-align: center;
 }
-@media only screen and (min-width: 10rem) and (max-width: 19.999rem) {
+@media (only screen and (min-width: 10rem) and (max-width: 19.999rem)) {
   .overlap-minus-rem {
     text-align: right;
   }
 }
-@media only screen and (min-width: 20rem) and (max-width: 49.999em) {
+@media (only screen and (min-width: 20rem) and (max-width: 49.999em)) {
   .overlap-minus-rem {
     text-align: left;
   }
@@ -53,12 +53,12 @@
 .overlap-plus-px {
   text-align: center;
 }
-@media only screen and (min-width: 101px) and (max-width: 200px) {
+@media (only screen and (min-width: 101px) and (max-width: 200px)) {
   .overlap-plus-px {
     text-align: right;
   }
 }
-@media only screen and (min-width: 201px) and (max-width: 800px) {
+@media (only screen and (min-width: 201px) and (max-width: 800px)) {
   .overlap-plus-px {
     text-align: left;
   }
@@ -66,12 +66,12 @@
 .overlap-minus-px {
   text-align: center;
 }
-@media only screen and (min-width: 100px) and (max-width: 199px) {
+@media (only screen and (min-width: 100px) and (max-width: 199px)) {
   .overlap-minus-px {
     text-align: right;
   }
 }
-@media only screen and (min-width: 200px) and (max-width: 799px) {
+@media (only screen and (min-width: 200px) and (max-width: 799px)) {
   .overlap-minus-px {
     text-align: left;
   }
@@ -79,43 +79,43 @@
 .overlap-force {
   text-align: center;
 }
-@media only screen and (min-width: 401px) and (max-width: 600px) {
+@media (only screen and (min-width: 401px) and (max-width: 600px)) {
   .overlap-force {
     text-align: right;
   }
 }
-@media only screen and (min-width: 600px) and (max-width: 800px) {
+@media (only screen and (min-width: 600px) and (max-width: 800px)) {
   .overlap-force {
     text-align: left;
   }
 }
-@media only screen and (min-width: 801px)  {
+@media (only screen and (min-width: 801px))  {
   .overlap-force {
     text-align: justify;
   }
 }
-@media only screen and (max-width: 1050px) {
+@media (only screen and (max-width: 1050px)) {
   .overlap-force {
     border: 1px;
     content: 'we are going max-width, and overlap is positive, so wont change';
   }
 }
-@media only screen and (min-width: 1051px)  {
+@media (only screen and (min-width: 1051px))  {
   .overlap-force {
     text-align: justify;
   }
 }
-@media only screen and (min-width: 401px) and (max-width: 1050px) {
+@media (only screen and (min-width: 401px) and (max-width: 1050px)) {
   .overlap-force {
     font-weight: bold;
   }
 }
-@media only screen and (max-width: 400px) {
+@media (only screen and (max-width: 400px)) {
   .overlap-force {
     font-weight: normal;
   }
 }
-@media only screen and (min-width: 1051px) {
+@media (only screen and (min-width: 1051px)) {
   .overlap-force {
     font-style: italic;
   }
@@ -123,43 +123,43 @@
 .overlap-force-em {
   text-align: center;
 }
-@media only screen and (min-width: 25.0625em) and (max-width: 37.5em) {
+@media (only screen and (min-width: 25.0625em) and (max-width: 37.5em)) {
   .overlap-force-em {
     text-align: right;
   }
 }
-@media only screen and (min-width: 37.5em) and (max-width: 50em) {
+@media (only screen and (min-width: 37.5em) and (max-width: 50em)) {
   .overlap-force-em {
     text-align: left;
   }
 }
-@media only screen and (min-width: 50.0625em)  {
+@media (only screen and (min-width: 50.0625em))  {
   .overlap-force-em {
     text-align: justify;
   }
 }
-@media only screen and (max-width: 65.625em) {
+@media (only screen and (max-width: 65.625em)) {
   .overlap-force-em {
     border: 1px;
     content: 'we are going max-width, and overlap is positive, so wont change';
   }
 }
-@media only screen and (min-width: 65.6875em)  {
+@media (only screen and (min-width: 65.6875em))  {
   .overlap-force-em {
     text-align: justify;
   }
 }
-@media only screen and (min-width: 25.0625em) and (max-width: 65.625em) {
+@media (only screen and (min-width: 25.0625em) and (max-width: 65.625em)) {
   .overlap-force-em {
     font-weight: bold;
   }
 }
-@media only screen and (max-width: 25em) {
+@media (only screen and (max-width: 25em)) {
   .overlap-force-em {
     font-weight: normal;
   }
 }
-@media only screen and (min-width: 65.6875em) {
+@media (only screen and (min-width: 65.6875em)) {
   .overlap-force-em {
     font-style: italic;
   }
