--- a/rupture/index.styl
+++ b/rupture/index.styl
@@ -288,3 +288,11 @@ rupture-portrait(density = null, fallback-class = null)
           {block}
 
 portrait = rupture-portrait unless rupture-no-conflict
+
+
+rupture-hover(density = null, orientation = null, fallback-class = null)
+  condition = "only screen and (hover: hover)";
+  @media ({condition})
+    {block}
+
+hover = rupture-hover unless rupture-no-conflict
