--- a/test/fixtures/orientation.styl
+++ b/test/fixtures/orientation.styl
@@ -12,22 +12,22 @@ rupture.density-queries = 'webkit' 'dpi'
   +above(500px, orientation: 'landscape')
     color: lime
 
-  +at(2, orientation: 'portrait')
+  +at(2, orientation: portrait)
     color: cyan
 
-  +below(500px, orientation: 'landscape')
+  +below(500px, orientation: landscape)
     color: magenta
 
-  +between(2, 4, orientation: 'portrait')
+  +between(2, 4, orientation: portrait)
     color: yellow
 
-  +desktop(orientation: 'landscape')
+  +desktop(orientation: landscape)
     color: black
 
-  +from-width(2, orientation: 'portrait')
+  +from-width(2, orientation: portrait)
     color: white
 
-  +mobile(orientation: 'landscape')
+  +mobile(orientation: "landscape")
     color: green
 
   +tablet(orientation: 'portrait')
@@ -36,13 +36,13 @@ rupture.density-queries = 'webkit' 'dpi'
   +to-width(2, orientation: 'landscape')
     color: navy
 
-  +retina(orientation: 'portrait')
+  +retina(orientation: portrait)
     color: brown
 
   +portrait(density: 'retina')
     color: brown
 
-  +density(2, orientation: 'landscape')
+  +density(2, orientation: landscape)
     color: gold
 
   +landscape(density: '2')
