--- a/test/fixtures/expected/between.css
+++ b/test/fixtures/expected/between.css
@@ -1,32 +1,32 @@
 .hello {
   color: #f00;
 }
-@media (only screen and (min-width: 500px) and (max-width: 700px)) {
+@media only screen and (min-width: 500px) and (max-width: 700px) {
   .hello {
     color: #00f;
   }
 }
-@media (only screen and (max-width: 400px)) {
+@media only screen and (max-width: 400px) {
   .hello {
     color: #0f0;
   }
 }
-@media (only screen and (min-width: 400px) and (max-width: 1050px)) {
+@media only screen and (min-width: 400px) and (max-width: 1050px) {
   .hello {
     color: #fff;
   }
 }
-@media (only screen and (min-width: 400px) and (max-width: 600px)) {
+@media only screen and (min-width: 400px) and (max-width: 600px) {
   .hello {
     color: #000;
   }
 }
-@media (only screen and (max-width: 500px)) {
+@media only screen and (max-width: 500px) {
   .hello {
     color: #eee;
   }
 }
-@media (only screen and (min-width: 200px)) {
+@media only screen and (min-width: 200px) {
   .hello {
     color: #ccc;
   }
