--- a/test/fixtures/expected/device.css
+++ b/test/fixtures/expected/device.css
@@ -1,7 +1,7 @@
 .device {
   color: #f00;
 }
-@media (only screen and (max-device-width: 600px)) {
+@media only screen and (max-device-width: 600px) {
   .device {
     color: #00f;
   }
@@ -9,7 +9,7 @@
 .not-device {
   color: #f00;
 }
-@media (only screen and (max-width: 600px)) {
+@media only screen and (max-width: 600px) {
   .not-device {
     color: #00f;
   }
@@ -17,13 +17,13 @@
 .device-mixin {
   color: #f00;
 }
-@media (only screen and (max-width: 600px)) {
+@media only screen and (max-width: 600px) {
   .device-mixin {
     color: #00f;
     content: 'max-width';
   }
 }
-@media (only screen and (max-device-width: 800px)) {
+@media only screen and (max-device-width: 800px) {
   .device-mixin {
     color: #00f;
     content: 'max-device-width';
