--- a/test/fixtures/expected/from.css
+++ b/test/fixtures/expected/from.css
@@ -2,7 +2,7 @@
   background: linear-gradient(from bottom, #f8f8f8, #f4f4f4);
   color: #f00;
 }
-@media (only screen and (min-width: 400px)) {
+@media only screen and (min-width: 400px) {
   .hello {
     color: #00f;
   }
