--- a/test/fixtures/expected/to.css
+++ b/test/fixtures/expected/to.css
@@ -2,7 +2,7 @@
   background: linear-gradient(to bottom, #f8f8f8, #f4f4f4);
   color: #f00;
 }
-@media (only screen and (max-width: 600px)) {
+@media only screen and (max-width: 600px) {
   .hello {
     color: #00f;
   }
