Fix "+rupture-hover" + remove "+hover"
By removing parantheses, the word "hover" was replace by "rupture-hover" in the media query, so I had to remove "+hover".

--- a/rupture/index.styl
+++ b/rupture/index.styl
@@ -261,7 +261,5 @@ portrait(density = null, fallback-class = null)
 
 rupture-hover(density = null, orientation = null, fallback-class = null)
   condition = "only screen and (hover: hover)";
-  @media ({condition})
+  @media condition
     {block}
-
-hover = rupture-hover
